# vlasov-solver

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: errors.h  fdtd.h  file_saving.h  initparams.h  mesh.h  mymath.h  output.h  particle.h  pfc.h  pfunc.h  plasmas.h  pyfunc.h  pyinput.h  solver.h  testparticles.h
init/: sail.py
input/: input.py
scripts/: dynamics.py
src/: CMakeLists.txt  fdtd.cpp  file_saving.cpp  initparams.cpp  main.cpp  mesh.cpp  mymath.cpp  output.cpp  particle.cpp  pfc.cpp  pfunc.cpp  plasmas.cpp  pyfunc.cpp  pyinput.cpp  solver.cpp  testparticles.cpp
